Fix mobile overflow

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ h1, h2, h3, h4, h5, h6 {
 #bar-wrap {
 	width: 100%;
 	position: fixed;
+	overflow: hidden;
 	height: 5px;
 	background-color: #444;
 }
@@ -89,6 +90,7 @@ nav {
 	position: relative;
 	z-index: 99;
 	background-color: #333;
+	overflow: auto;
 	width:  100%;
 	box-shadow: 0 -10px 0 #6d648f;
 }
@@ -203,6 +205,7 @@ p.tq { font-size: 50px; font-family: Arial; line-height: 24px; color: #666;}
 	width: 50%;
 	font-weight: bold;
 	font-size: 20px;
+	list-style: none;
 	color: #fff;
 	float: left;
 }
